syntax = "proto3";

package template.v1;

import "common/v1/common.proto";
import "google/protobuf/timestamp.proto";

message Template {
  string id = 1;
  string subject = 2;
  string content = 3;
  repeated string placeholders = 4;
  string state = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
}

message CreateRequest {
  string content = 1;
  repeated string placeholders = 2;
  string subject = 3;
}

message CreateResponse {
  string message = 1;
  Template record = 2;
}

message ReadOneRequest {
  repeated common.v1.Filter filter = 1;
}

message ReadOneResponse {
  string message = 1;
  Template record = 2;
}

message ReadRequest {
  common.v1.Request request = 1;
}

message ReadResponse {
  common.v1.Request query = 1;
  int64 size = 2;
  repeated Template records = 3;
}

message UpdateRequest {
  string id = 1;
  string content = 2;
  repeated string placeholders = 3;
  string subject = 4;
}

message UpdateResponse {
  string message = 1;
}

message DeleteRequest {
  string id = 1;
}

message DeleteResponse {
  string message = 1;
  Template record = 2;
}
